--- a/fe/index.html
+++ b/fe/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오픽꿀잼</title>
+    <title>오꿀</title>
   </head>
   <body>
     <div id="app"></div>
