--- a/fe/index.html
+++ b/fe/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/okkul_logo.png">
+  <link rel="icon" href="/default-profile.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>오꿀</title>
