--- a/fe/index.html
+++ b/fe/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/default-profile.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>오꿀</title>
+  <title>OKKUL</title>
 </head>
 
 <body>
